# blazeKVDB

./: .gitignore  Cargo.toml  blaze.toml  docker-compose.yaml  prometheus.yaml
data/snapshots/: snapshot-latest.rdb
src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/commands/: delete.rs  exist.rs  get.rs  mod.rs  ping.rs  scan.rs  set.rs  stats.rs
src/http/: metrics.rs
src/protocol/: parser.rs
src/server/: connection.rs  tcp.rs
src/storage/: mod.rs
src/storage/engine/: memory.rs
src/storage/persistence/: aof.rs  manager.rs  mod.rs  recovery.rs  snapshot.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/commands/: mod.rs  test_delete.rs  test_dispatcher.rs  test_exist.rs  test_get.rs  test_ping.rs  test_scan.rs  test_set.rs  test_stats.rs
tests/src/protocol/: mod.rs  test_protocol_parser.rs
tests/src/server/: mod.rs  test_connection.rs
tests/src/storage/: mod.rs
tests/src/storage/test_engine/: mod.rs  test_memory.rs
tests/src/storage/test_persistence/: mod.rs  test_aof.rs  test_persistence.rs
