[package]
name = "resp_lite"
version = "0.1.0"
license = "MIT"
authors = ["Faqih Firmansyah <github.com/Xenn-00>"]
edition = "2024"

[workspace]
members = [".", "tests"]

[dependencies]
# Core
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
bytes = "1.10.1"
config = "0.15.17"
async-trait = "0.1.89"

# Storage
serde = {version = "1.0.227", features = ["derive"]}
base64 = "0.22.1"
bincode = "2.0.1"
serde_json = "1.0.145"
parking_lot = "0.12.4"
flume = "0.11.1"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.100"

# Metrics
prometheus = "0.14.0"